--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ language: node_js
 os:
   - osx
   - linux
-node_js: 8
+  - windows
+node_js:
+  - '8'
+  - '10'
+  - '12'
+  - 'node'
 
 install:
   - |
@@ -20,4 +25,4 @@ script:
 cache:
   yarn: true
   directories:
-  - .vscode-test
+    - .vscode-test
